# MLSD_Smolyanov

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/classes/: grozi.csv
docs/: ml_system_design_doc.md
