[tool.poetry]
name = "Some Project"
version = "0.1.0"
description = "Some Description"
authors = ["Nikolay Smolyanov <smoljanov.official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pre-commit = "^3.0.0"
pytest = "^7.0.0"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "RUF"] 
ignore = ["E501"] 
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
